# parx

./: .envrc  .gitignore  .marimo_agent_state.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NEXT_PHASES.md  OVERVIEW.md  PLAN.md  README.md  TODO.md  mkdocs.yml  project_overview.py  pyproject.toml  road2publish.md
.github/workflows/: ci.yml  docs.yml
__marimo__/session/: project_overview.py.json
docs/: concepts.md  examples.md  index.md  reference.md  usage.md
docs/notebooks/: demo_plotly.html  demo_plt.html  feature_embedding.html  index.md
examples/: 01_identity_network.py  02_random_mlp.py  03_epochs.py  04_feature_embedding.py
layouts/: project_overview.slides.json
notebooks/: demo_plotly.py  demo_plt.py  feature_embedding.py
src/parx/: __init__.py  _check.py  _julia_init.py  _lp.py  analysis.py  diagnostics.py  io.py  io_partition.py  juliapkg.json  network.py  partition.py  precompile.py  region.py  verify.py  viz.py
src/parx/julia/: LinearRegions.jl  Manifest.toml  Project.toml  bridge.jl  exact.jl  lp.jl  sparse.jl
src/parx/julia/src/: LinearRegions.jl  self_test.jl
src/parx/methods/: __init__.py  exact_julia.py  exact_julia_fast.py  exact_python.py  sparse_julia.py  sparse_python.py
src/polarx/: __init__.py  _check.py
src/polarx/julia/: Project.toml
tests/: conftest.py  test_analysis.py  test_diagnostics.py  test_io.py  test_io_partition.py  test_julia_bridge.py  test_methods.py  test_mlp.py  test_network.py  test_partition.py  test_verify.py  test_viz.py
