[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "parx"
version = "0.1.0"
description = "POLyhedral Activation Region Xplorer: exact enumeration of linear regions in ReLU neural networks"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Johan Mylius-Kroken", email = "johan.m.kroken@gmail.com" }
]
keywords = [
    "neural networks",
    "linear regions",
    "polyhedral",
    "ReLU",
    "piecewise linear",
    "affine",
    "interpretability",
    "geometry",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "juliacall>=0.9.0",
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "plotly>=6.7.0",
    "nbformat>=5.10.4",
]

[project.optional-dependencies]
h5 = ["h5py>=3.8"]
animate = ["matplotlib>=3.5"]
embed = ["umap-learn>=0.5"]
analysis = ["scikit-learn>=1.3"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "mkdocstrings[python]>=0.26"]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
    "kaleido",
    "matplotlib>=3.5",
    "h5py>=3.8",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/Johanmkr/parx"
Documentation = "https://github.com/Johanmkr/parx#readme"
Repository = "https://github.com/Johanmkr/parx"
Issues = "https://github.com/Johanmkr/parx/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
parx = ["julia/*", "julia/src/*", "juliapkg.json"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

# --- Pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

# --- Mypy ---
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
